core/tests/ui/store/nested_ref_unsupported_nested_wrapper.stderr
error[E0277]: the trait bound `Vec<Wrapper>: BindrefShape` is not satisfied
  --> tests/ui/store/nested_ref_unsupported_nested_wrapper.rs:18:15
   |
18 |     children: Vec<Wrapper>,
   |               ^^^^^^^^^^^^ the trait `BindrefShape` is not implemented for `Vec<Wrapper>`
   |
help: the trait `BindrefShape` is implemented for `Vec<T>`
  --> src/lib.rs
   |
   | / impl<T> BindrefShape for Vec<T>
   | | where
   | |     T: BindrefShape + Send,
   | |     T::Stored: Send,
   | |____________________^

error[E0277]: the trait bound `Vec<Wrapper>: BindrefShape` is not satisfied
  --> tests/ui/store/nested_ref_unsupported_nested_wrapper.rs:14:62
   |
14 | #[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
   |                                                              ^^^^^ the trait `BindrefShape` is not implemented for `Vec<Wrapper>`
   |
help: the trait `BindrefShape` is implemented for `Vec<T>`
  --> src/lib.rs
   |
   | / impl<T> BindrefShape for Vec<T>
   | | where
   | |     T: BindrefShape + Send,
   | |     T::Stored: Send,
   | |____________________^
   = note: this error originates in the derive macro `Store` (in Nightly builds, run with -Z macro-backtrace for more info)
